k8s-deployments/5g4data/application/templates/a2a-registry-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a2a-registry-frontend

spec:
  type: ClusterIP

  selector:
    app: a2a-registry-frontend

  ports:
    - name: http
      port: 80
      targetPort: 80
