k8s-deployments/5g4data/application/templates/a2a-registry-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a2a-registry-api

spec:
  type: ClusterIP

  selector:
    app: a2a-registry-api

  ports:
    - name: http
      port: 8000
      targetPort: 8000
