k8s-deployments/5g4data/application/templates/flask-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app

spec:
  type: ClusterIP

  selector:
    app: flask-app

  ports:
    - name: http
      port: 5003
      targetPort: 5003
