k8s-deployments/5g4data/application/templates/workload-catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workload-catalog

spec:
  type: ClusterIP

  selector:
    app: workload-catalog

  ports:
    - name: http
      port: 3000
      targetPort: 3000
